[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameHUDRelated/Tooltips/TowerTooltipRelated/TowerTooltip.gd" type="Script" id=1]
[ext_resource path="res://GameHUDRelated/Tooltips/TowerTooltipRelated/TowerTooltipHeader.png" type="Texture" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GameHUDRelated/Tooltips/TowerTooltipRelated/TowerTooltipLeftAndRightSide.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameHUDRelated/Tooltips/TowerTooltipRelated/TowerTooltipMidSeparator.png" type="Texture" id=6]
[ext_resource path="res://GameHUDRelated/Tooltips/TowerTooltipRelated/TowerTooltipBottomSide.png" type="Texture" id=7]
[ext_resource path="res://GameHUDRelated/Tooltips/TowerTooltipRelated/TowerTooltipEnder.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[node name="TowerTooltip" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RowsMainContainer" type="VBoxContainer" parent="."]
margin_right = 210.0
margin_bottom = 111.0
mouse_filter = 2
custom_constants/separation = 0

[node name="HeaderContainer" type="MarginContainer" parent="RowsMainContainer"]
margin_right = 210.0
margin_bottom = 20.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="RowsMainContainer/HeaderContainer"]
margin_right = 210.0
margin_bottom = 20.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Marginer" type="MarginContainer" parent="RowsMainContainer/HeaderContainer"]
margin_right = 210.0
margin_bottom = 20.0
mouse_filter = 2
custom_constants/margin_right = 7
custom_constants/margin_top = 3
custom_constants/margin_left = 7
custom_constants/margin_bottom = 0

[node name="HeaderColumns" type="HBoxContainer" parent="RowsMainContainer/HeaderContainer/Marginer"]
margin_left = 7.0
margin_top = 3.0
margin_right = 203.0
margin_bottom = 20.0
mouse_filter = 2

[node name="TowerName" type="Label" parent="RowsMainContainer/HeaderContainer/Marginer/HeaderColumns"]
margin_bottom = 17.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
valign = 1

[node name="Marginer" type="MarginContainer" parent="RowsMainContainer/HeaderContainer/Marginer/HeaderColumns"]
margin_left = 196.0
margin_right = 196.0
margin_bottom = 17.0
mouse_filter = 2
size_flags_horizontal = 10
custom_constants/margin_bottom = 3

[node name="TowerColor01" type="TextureRect" parent="RowsMainContainer/HeaderContainer/Marginer/HeaderColumns/Marginer"]
margin_top = 7.0
margin_bottom = 7.0
mouse_filter = 2
size_flags_vertical = 6

[node name="TowerColor02" type="TextureRect" parent="RowsMainContainer/HeaderContainer/Marginer/HeaderColumns/Marginer"]
margin_top = 7.0
margin_bottom = 7.0
mouse_filter = 2
size_flags_vertical = 6

[node name="StatsContainer" type="MarginContainer" parent="RowsMainContainer"]
margin_top = 20.0
margin_right = 210.0
margin_bottom = 76.0
mouse_filter = 2
size_flags_vertical = 7

[node name="TextureRect" type="TextureRect" parent="RowsMainContainer/StatsContainer"]
margin_right = 210.0
margin_bottom = 56.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="StatsAndInfoDivider" type="HBoxContainer" parent="RowsMainContainer/StatsContainer"]
margin_right = 210.0
margin_bottom = 56.0
mouse_filter = 2
custom_constants/separation = 0

[node name="CombineAndPowerInfoPanel" type="MarginContainer" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider"]
margin_right = 105.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 3
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 3

[node name="InfoRow" type="VBoxContainer" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/CombineAndPowerInfoPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 102.0
margin_bottom = 53.0
mouse_filter = 2
custom_constants/separation = 3

[node name="CmbInfoIndicator" type="Label" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/CombineAndPowerInfoPanel/InfoRow"]
margin_right = 97.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ingredient Info:"

[node name="CmbInfoBody" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/CombineAndPowerInfoPanel/InfoRow" instance=ExtResource( 5 )]
margin_top = 13.0
margin_right = 97.0
margin_bottom = 18.0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="EnergyInfoIndicator" type="Label" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/CombineAndPowerInfoPanel/InfoRow"]
margin_top = 21.0
margin_right = 97.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Energy Info:"

[node name="EnergyInfoBody" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/CombineAndPowerInfoPanel/InfoRow" instance=ExtResource( 5 )]
margin_top = 34.0
margin_right = 97.0
margin_bottom = 34.0
custom_constants/margin_left = 5

[node name="TowerStatsPanel" type="MarginContainer" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider"]
margin_left = 105.0
margin_right = 210.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="StatsRow" type="VBoxContainer" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel"]
margin_left = 3.0
margin_top = 5.0
margin_right = 100.0
margin_bottom = 53.0
mouse_filter = 2

[node name="BaseDamagePanel" type="HBoxContainer" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow"]
margin_right = 97.0
margin_bottom = 9.0
mouse_filter = 2

[node name="LabelInfo" type="Label" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow/BaseDamagePanel"]
margin_right = 93.0
margin_bottom = 9.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "base damage:"
valign = 1

[node name="BaseDamageLabel" type="Label" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow/BaseDamagePanel"]
margin_left = 97.0
margin_right = 97.0
margin_bottom = 9.0
size_flags_horizontal = 9
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1

[node name="DamageTypePanel" type="HBoxContainer" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow"]
margin_top = 13.0
margin_right = 97.0
margin_bottom = 22.0
mouse_filter = 2

[node name="LabelInfo" type="Label" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow/DamageTypePanel"]
margin_right = 93.0
margin_bottom = 9.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "damage type:"
valign = 1

[node name="DamageTypeLabel" type="Label" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow/DamageTypePanel"]
margin_left = 97.0
margin_right = 97.0
margin_bottom = 9.0
size_flags_horizontal = 9
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1

[node name="AttkSpeedPanel" type="HBoxContainer" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow"]
margin_top = 26.0
margin_right = 97.0
margin_bottom = 35.0
mouse_filter = 2

[node name="LabelInfo" type="Label" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow/AttkSpeedPanel"]
margin_right = 93.0
margin_bottom = 9.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "attack speed:"
valign = 1

[node name="AttkSpeedLabel" type="Label" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow/AttkSpeedPanel"]
margin_left = 97.0
margin_right = 97.0
margin_bottom = 9.0
size_flags_horizontal = 9
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1

[node name="RangePanel" type="HBoxContainer" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow"]
margin_top = 39.0
margin_right = 97.0
margin_bottom = 48.0
mouse_filter = 2

[node name="LabelInfo" type="Label" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow/RangePanel"]
margin_right = 93.0
margin_bottom = 9.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "range:"
valign = 1

[node name="RangeLabel" type="Label" parent="RowsMainContainer/StatsContainer/StatsAndInfoDivider/TowerStatsPanel/StatsRow/RangePanel"]
margin_left = 97.0
margin_right = 97.0
margin_bottom = 9.0
size_flags_horizontal = 9
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1

[node name="MidSeparator" type="TextureRect" parent="RowsMainContainer"]
margin_top = 76.0
margin_right = 210.0
margin_bottom = 78.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="DescriptionContainer" type="MarginContainer" parent="RowsMainContainer"]
margin_top = 78.0
margin_right = 210.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_vertical = 7

[node name="TextureRect" type="TextureRect" parent="RowsMainContainer/DescriptionContainer"]
margin_right = 210.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 2

[node name="Marginer" type="MarginContainer" parent="RowsMainContainer/DescriptionContainer"]
margin_right = 210.0
margin_bottom = 30.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 3

[node name="DescriptionsBody" parent="RowsMainContainer/DescriptionContainer/Marginer" instance=ExtResource( 5 )]
margin_left = 5.0
margin_top = 5.0
margin_right = 205.0
margin_bottom = 27.0

[node name="EndBorder" type="TextureRect" parent="RowsMainContainer"]
margin_top = 108.0
margin_right = 210.0
margin_bottom = 111.0
mouse_filter = 2
texture = ExtResource( 8 )
